syntax = "proto3";

option csharp_namespace = "Shared";
import "google/protobuf/empty.proto";

package order;

service GrpcOrderService {
  rpc GetOrders (google.protobuf.Empty) returns (stream OrderResponse);
  rpc GetOrderById (OrderByIdRequest) returns (OrderResponse);
  rpc CreateOrder (OrderCreateRequest) returns (OrderResponse);
}

message OrderRequest {
  string category = 1;
}

message OrderResponse {
  int32  id = 1;
  string name = 2;
  string number = 3;
  double total = 4;
}

message OrderByIdRequest {
  string uuid = 1;
}

message OrderCreateRequest{
  string name = 1;
  string description = 2;
}
